# oss-repo-template

./: index.md  lab01.md
labs/lab-01/: lab01.md
labs/lab-02/: lab02.md  myprojectprogress.md
labs/lab-03/: lab03.md
labs/lab-03/AutoGrading_stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
labs/lab-04/: lab04.md  lab04.txt
labs/lab-05/: lab05.md
labs/lab-05/Tutorial/Step1/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake  directions.txt  tutorial.cxx
labs/lab-05/Tutorial/Step2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
labs/lab-05/Tutorial/Step3/: CMakeCache.txt  Makefile  Tutorial  (+1 more)
labs/lab-06/: lab06.md
labs/lab-07/: lab07.md  plot_words_w4.py  plot_words_w4_near.py  plot_words_w5.py  plot_words_w5_comb.py
labs/lab-08/: lab08.md
labs/lab-09/: TF_ckpt2.py  TF_ckpt3.py  lab09.md
projects/Analysis of Open Source/: project.md  project.txt
projects/Analysis of Open Source/CCE_stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
projects/Analysis of Open Source/MxM_stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
projects/Analysis of Open Source/nyx_stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
(+26 files in other folders)
